chore: custom mesh support
